@@ -88,6 +88,7 @@
   directly contact the server
   - [ ] Implement unit test, at least to be sure a server can't add itself twice
 **** TODO Client work
+     CLOCK: [2016-10-20 jeu. 00:00]--[2016-10-20 jeu. 00:46] =>  0:46
      CLOCK: [2016-10-19 mer. 00:27]--[2016-10-19 mer. 01:00] =>  0:33
      CLOCK: [2016-10-19 mer. 00:10]--[2016-10-19 mer. 00:24] =>  0:14
      CLOCK: [2016-10-18 mar. 01:35]--[2016-10-18 mar. 01:55] =>  0:20
@@ -133,8 +134,9 @@
 - [X] Must manually build CEGUI 0.8 for CI
   because CEGUI-0' and 'CEGUI-0-OGRE' can't be found
   - [X] Trying to build (follow http://cegui.org.uk/wiki/Building_from_source)
-- [ ] Continue client work
-  - [ ] Make the exit button work
+- [-] Continue client work
+  - [X] Make the exit button work
+    The button is named Exit
   - [ ] Maybe add a static image as logo
   - [ ] Client has a segfault if we cancel Ogre configuration dialog
 **** DONE [test_ogre1.9] Let's test if switching to Ogre1.9
