@@ -36,3 +36,4 @@ OVERALL TODO
    Add git tag r-1 when switching
    
 * v0.0.5-251 (19 Oct. 2016 - ???) SLOC ??? FT ???:?? UT ?
+- Make the main menu's exit button exit the game
